# graphneuralnets

./: README.md  mypy.ini  pyproject.toml
src/graphneuralnets/message_passing/: graph_matrix.py  graph_tensor.py
tests/unit/: test_adjacency.py  test_directed.py
